--- a/trabalho_chatgpt.ipynb
+++ b/trabalho_chatgpt.ipynb
@@ -17,6 +17,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Trabalho Breno Goes e Gabriel Gustavo"
+      ],
+      "metadata": {
+        "id": "BDcKqGjD0R61"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Crie uma função em python que seja capaz de utilizar a API do Yahoo finance para baixar os dados históricos diários das ações da Petrobras (código PETR4) e salvar esses dados como um arquivo .csv"
       ],
       "metadata": {
